[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cm_models"
version = "0.0.0"
authors = [
  {name="Christian Moulsdale", email="spoopydale@gmail.com"},
]
description = "A collection of models for electronic calculations"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/spoopydale/ray_handler"
Issues = "https://github.com/spoopydale/ray_handler/issues"