[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cm_models"
version = "0.0.0"
authors = [
  {name="Christian Moulsdale", email="spoopydale@gmail.com"},
]
description = "A collection of models for electronic calculations"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/spoopydale/cm_models"
Issues = "https://github.com/spoopydale/cm_models/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = ["tests"]
